add description of device in actions

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -234,7 +234,11 @@
                   <tbody>
                     {% for dev in devices %}
                     <tr>
-                      <td><input type="checkbox" class="deviceSelect" data="{{ dev.id }}"/></td>
+                      <td>
+                          <input type="checkbox" class="deviceSelect" data="{{ dev.id }}"
+                               data-device-type="{{ dev.type }}" data-device-manufacturer="{{ dev.manufacturer }}"
+                               data-device-dhid="{{ dev.devicehub_id }}" />
+                      </td>
                       <td>
                         <a href="{{ url_for('inventory.devices.device_details', id=dev.devicehub_id)}}">
                           {{ dev.type }} {{ dev.manufacturer }} {{ dev.model }}
