--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -21,8 +21,10 @@
               </p>
               <p class="enumeration-devices"></p>
           </div>
+          {% elif field == form_new_action.lot %}
+            {{ field }}
           {% elif field == form_new_action.type %}
-            {{ field(class_="form-control") }}
+            {{ field }}
           {% else %}
           <div class="col-12">
               {{ field.label(class_="form-label") }}
