check the checkbox in a devices list when one form is invalid

--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -16,7 +16,7 @@
           <div class="col-12">
               {{ field.label(class_="form-label") }}: <span class="devices-count"></span>
               {{ field(class_="devicesList") }}
-              <p class="text-danger">
+              <p class="text-danger pol">
                   You need select first some device before to do one action
               </p>
               <p class="enumeration-devices"></p>
