--- a/ereuse_devicehub/templates/inventory/allocate.html
+++ b/ereuse_devicehub/templates/inventory/allocate.html
@@ -11,16 +11,13 @@
       <form action="{{ url_for('inventory.devices.allocate_add') }}" method="post">
       {{ form_new_allocate.csrf_token }}
         <div class="modal-body">
-          <p class="text-danger" id="pol" style="display: none;">
-              You need select first some device before to do one action
-          </p>
           {% for field in form_new_allocate %}
           {% if field != form_new_allocate.csrf_token %}
           {% if field == form_new_allocate.devices  %}
           <div class="col-12">
               {{ field.label(class_="form-label") }}: <span class="devices-count"></span>
               {{ field(class_="devicesList") }}
-              <p class="text-danger">
+              <p class="text-danger pol" style="display: none;">
                   You need select first some device before to do one action
               </p>
               <p class="enumeration-devices"></p>
