--- a/ereuse_devicehub/templates/inventory/removeDeviceslot.html
+++ b/ereuse_devicehub/templates/inventory/removeDeviceslot.html
@@ -16,7 +16,7 @@
             {% endfor %}
           </select>
           <input class="devicesList" type="hidden" name="devices" />
-          <p class="text-danger">
+          <p class="text-danger pol">
               You need select first some device for remove this from a lot
           </p>
         </div>
