--- a/ereuse_devicehub/templates/inventory/addDeviceslot.html
+++ b/ereuse_devicehub/templates/inventory/addDeviceslot.html
@@ -17,7 +17,7 @@
             {% endfor %}
           </select>
           <input class="devicesList" type="hidden" name="devices" />
-          <p class="text-danger">
+          <p class="text-danger pol">
               You need select first some device for adding this in a lot
           </p>
         </div>
