--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -175,6 +175,15 @@
 </aside><!-- End Sidebar-->
 
 <main id="main" class="main">
+  {% block messages %}
+    {% for message in session['_messages'] %}
+      <div class="alert alert-{{ message.level}} alert-dismissible fade show" role="alert">
+        <i class="bi bi-{{ message.icon }} me-1"></i>
+        {{ message.content }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  {% endblock %}
   {% block main %}
 
   {% endblock main %}
