--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -75,13 +75,13 @@
                 </li>
                 {% if lot.is_temporary %}
                 <li>
-                  <a href="javascript:newTrade('supplier')" class="dropdown-item">
+                  <a href="javascript:newTrade('user_from')" class="dropdown-item">
                     <i class="bi bi-plus"></i>
                     Add supplier
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:newTrade('receiver')" class="dropdown-item">
+                  <a href="javascript:newTrade('user_to')" class="dropdown-item">
                     <i class="bi bi-plus"></i>
                     Add receiver
                   </a>
