problem display none for adding tag form

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -198,7 +198,7 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="btnTags">
                 <li>
-                  <a href="javascript:void()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addingTagModal">
+                  <a href="javascript:addTag()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addingTagModal">
                     <i class="bi bi-plus"></i>
                     Add Tag to selected Devices
                   </a>
