manager better the error messages in trade form

--- a/ereuse_devicehub/templates/inventory/allocate.html
+++ b/ereuse_devicehub/templates/inventory/allocate.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="allocateModal" tabindex="-1" style="display: none;" aria-hidden="true"
-    data-show-action-form="{{ form_new_allocate.type.data }}">
+    data-show-action-form="{{ form_new_allocate.check_valid() }}">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
 
