--- a/ereuse_devicehub/templates/inventory/data_wipe.html
+++ b/ereuse_devicehub/templates/inventory/data_wipe.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="datawipeModal" tabindex="-1" style="display: none;" aria-hidden="true"
-    data-show-action-form="{{ form_new_datawipe.type.data }}">
+    data-show-action-form="{{ form_new_datawipe.check_valid() }}">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
 
