--- a/ereuse_devicehub/templates/inventory/trade.html
+++ b/ereuse_devicehub/templates/inventory/trade.html
@@ -1,4 +1,5 @@
-<div class="modal fade" id="tradeLotModal" tabindex="-1" style="display: none;" aria-hidden="true">
+<div class="modal fade" id="tradeLotModal" tabindex="-1" style="display: none;" aria-hidden="true"
+    data-show-action-form="{{ form_new_trade.check_valid() }}">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
 
@@ -13,11 +14,7 @@
           {% for field in form_new_trade %}
           {% if field != form_new_trade.csrf_token %}
           {% if field == form_new_trade.devices  %}
-          <div class="col-12">
-              {{ field.label(class_="form-label") }}: <span class="devices-count"></span>
-              {{ field(class_="devicesList") }}
-              <p class="enumeration-devices"></p>
-          </div>
+            {{ field }}
           {% elif field == form_new_trade.lot %}
             {{ field }}
           {% elif field == form_new_trade.type %}
