--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -207,8 +207,27 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnExport">
                   <li>
-                    <a href="#" class="dropdown-item">
-                      TODO: Not implemented
+                    <a href="javascript:export_file('devices')" class="dropdown-item">
+                      <i class="bi bi-file-spreadsheet"></i>
+                      Devices Spreadsheet
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:export_file('metrics')" class="dropdown-item">
+                      <i class="bi bi-file-spreadsheet"></i>
+                      Metrics Spreadsheet
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:export_file('links')" class="dropdown-item">
+                      <i class="bi bi-link-45deg"></i>
+                      Public Links
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:export_file('certificates')" class="dropdown-item">
+                      <i class="bi bi-eraser-fill"></i>
+                      Erasure Certificate
                     </a>
                   </li>
                 </ul>
@@ -352,9 +371,7 @@
 {% include "inventory/actions.html" %}
 {% include "inventory/allocate.html" %}
 {% include "inventory/data_wipe.html" %}
-{% if lot and lot.is_temporary %}
-  {% include "inventory/trade.html" %}
-{% endif %}
+{% include "inventory/trade.html" %}
 
 <!-- CDN -->
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
