--- a/ereuse_devicehub/templates/inventory/trade.html
+++ b/ereuse_devicehub/templates/inventory/trade.html
@@ -55,4 +55,7 @@
     </div>
   </div>
 </div>
+{% else %}
+<div class="modal fade" id="tradeLotModal" tabindex="-1" style="display: none;" aria-hidden="true"
+    data-show-action-form="None">
 {% endif %}
