--- a/ereuse_devicehub/templates/inventory/trade.html
+++ b/ereuse_devicehub/templates/inventory/trade.html
@@ -58,4 +58,5 @@
 {% else %}
 <div class="modal fade" id="tradeLotModal" tabindex="-1" style="display: none;" aria-hidden="true"
     data-show-action-form="None">
+</div>
 {% endif %}
