task #2739 Manufacter and Model empty instead of None

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -246,7 +246,7 @@
                       </td>
                       <td>
                         <a href="{{ url_for('inventory.devices.device_details', id=dev.devicehub_id)}}">
-                          {{ dev.type }} {{ dev.manufacturer }} {{ dev.model }}
+                          {{ dev.type }} {{ dev.manufacturer|d('', true) }} {{ dev.model|d('', true) }}
                         </a>
                       </td>
                       <td>
