add error msg when there are more than one device selected for add or remove one tag

--- a/ereuse_devicehub/templates/inventory/addDevicestag.html
+++ b/ereuse_devicehub/templates/inventory/addDevicestag.html
@@ -18,7 +18,7 @@
           </select>
           <input class="devicesList" type="hidden" name="device" />
           <p class="text-danger pol">
-              You need select first some device for adding this in a tag
+              You need select first one device and only one for add this in a tag
           </p>
         </div>
 
