#2890 Go back to lot detail when cancel lot edit

--- a/ereuse_devicehub/templates/inventory/lot.html
+++ b/ereuse_devicehub/templates/inventory/lot.html
@@ -43,7 +43,11 @@
                   </div>
 
                   <div class="col-12">
-                    <a href="{{ url_for('inventory.devices.devicelist') }}" class="btn btn-danger">Cancel</a>
+                    {% if form.id %}
+                      <a href="{{ url_for('inventory.devices.lotdevicelist', lot_id=form.id) }}" class="btn btn-danger">Cancel</a>
+                    {% else %}
+                      <a href="{{ url_for('inventory.devices.devicelist') }}" class="btn btn-danger">Cancel</a>
+                    {% endif %}
                     <button class="btn btn-primary" type="submit">Save</button>
                   </div>
                 </form>
