--- a/ereuse_devicehub/templates/inventory/tag_create.html
+++ b/ereuse_devicehub/templates/inventory/tag_create.html
@@ -33,7 +33,7 @@
                 <form method="post" class="row g-3 needs-validation" novalidate>
                   {{ form.csrf_token }}
 
-                  <div class="col-12">
+                  <div>
                     <label for="code" class="form-label">code</label>
                     <div class="input-group has-validation">
                       <input type="text" name="code" class="form-control" required value="{{ form.code.data|default('', true) }}">
@@ -48,7 +48,7 @@
                     {% endif %}
                   </div>
 
-                  <div class="col-12">
+                  <div>
                     <a href="{{ url_for('inventory.devices.taglist') }}" class="btn btn-danger">Cancel</a>
                     <button class="btn btn-primary" type="submit">Save</button>
                   </div>
