--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -32,36 +32,24 @@
         <div class="card-body pt-3">
           <!-- Bordered Tabs -->
 
-            <div class="row">
-              <div class="col-6">
-                  <h3><a href="{{ url_for('inventory.devices.lot_edit', id=lot.id) }}">{{ lot.name }}</a></h3>
-              </div>
-              <div class="col">
-                  {% if lot and lot.is_temporary %}
-                    <span class="d-none" id="activeRemoveLotModal" data-bs-toggle="modal" data-bs-target="#btnRemoveLots"></span>
-                    <a href="javascript:removeLot()">
-                      <i class="bi bi-trash"></i>
-                      Remove Lot
-                    </a>
-                  {% endif %}
-              </div>
-              <div class="col">
-                  {% if lot and lot.is_temporary %}
-                    <a href="javascript:newTrade('user_from')">
-                      <i class="bi bi-plus"></i>
-                      Add supplier
-                    </a>
-                  {% endif %}
-              </div>
-              <div class="col">
-                  {% if lot and lot.is_temporary %}
-                    <a href="javascript:newTrade('user_to')">
-                      <i class="bi bi-plus"></i>
-                      Add receiver
-                    </a>
-                  {% endif %}
-              </div>
+          <div class="d-flex align-items-center justify-content-between">
+            <h3><a href="{{ url_for('inventory.devices.lot_edit', id=lot.id) }}">{{ lot.name }}</a></h3>
+
+            <div><!-- lot actions -->
+              {% if lot.is_temporary %}
+                <span class="d-none" id="activeRemoveLotModal" data-bs-toggle="modal" data-bs-target="#btnRemoveLots"></span>
+                <a class="me-2" href="javascript:removeLot()">
+                  <i class="bi bi-trash"></i> Remove Lot
+                </a>
+                <a class="me-2" href="javascript:newTrade('user_from')">
+                  <i class="bi bi-plus"></i> Add supplier
+                </a>
+                <a href="javascript:newTrade('user_to')">
+                  <i class="bi bi-plus"></i> Add receiver
+                </a>
+              {% endif %}
             </div>
+          </div>
         </div>
       </div>
       {% endif %}
