--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -42,10 +42,10 @@
                   <i class="bi bi-trash"></i> Remove Lot
                 </a>
                 <a class="me-2" href="javascript:newTrade('user_from')">
-                  <i class="bi bi-plus"></i> Add supplier
+                  <i class="bi bi-arrow-down-right"></i> Add supplier
                 </a>
                 <a href="javascript:newTrade('user_to')">
-                  <i class="bi bi-plus"></i> Add receiver
+                  <i class="bi bi-arrow-up-right"></i> Add receiver
                 </a>
               {% endif %}
             </div>
