--- a/ereuse_devicehub/templates/inventory/device_create.html
+++ b/ereuse_devicehub/templates/inventory/device_create.html
@@ -370,7 +370,11 @@
                   </div>
 
                   <div>
+                    {% if lot_id %}
+                    <a href="{{ url_for('inventory.devices.lotdevicelist', lot_id=lot_id) }}" class="btn btn-danger">Cancel</a>
+                    {% else %}
                     <a href="{{ url_for('inventory.devices.devicelist') }}" class="btn btn-danger">Cancel</a>
+                    {% endif %}
                     <button class="btn btn-primary" type="submit">Save</button>
                   </div>
                 </form>
