--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -286,25 +286,20 @@
               {% endif %}
 
               <div class="tab-content pt-2">
-
-                {% if form_filter.filter.data %}
-                <h5 class="card-title">{{ form_filter.filter.data }}</h5>
-                {% else %}
-                <h5 class="card-title">Computer</h5>
-                {% endif %}
                 <form method="get">
-                  <div class="row">
-                  <div class="col-2">
-                  {% for f in form_filter %}
-                    {{ f }}
-                  {% endfor %}
-                  </div>
-                  <div class="col-1">
-                    <input type="submit" class="btn btn-primary" value="Search" />
-                  </div>
-                  <div class="col"></div>
+                  <div class="d-flex mt-4 mb-4">
+                    {% for f in form_filter %}
+                      {{ f }}
+                    {% endfor %}
+                    <input type="submit" class="ms-2 btn btn-primary" value="Filter" />
                   </div>
                 </form>
+
+                <p class="mt-3">
+                  Displaying devices of type
+                  <em>{{ form_filter.filter.data or "Computer" }}</em>
+                </p>
+
                 <table class="table">
                   <thead>
                     <tr>
