--- a/ereuse_devicehub/templates/inventory/removelot.html
+++ b/ereuse_devicehub/templates/inventory/removelot.html
@@ -16,7 +16,7 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a href="{{ url_for('inventory.devices.lot_del', id=lot.id)}}" type="button" class="btn btn-primary">
+          <a href="{{ url_for('inventory.lot_del', id=lot.id)}}" type="button" class="btn btn-primary">
             Confirm
           </a>
         </div>
