--- a/ereuse_devicehub/templates/inventory/tag_unlink_device.html
+++ b/ereuse_devicehub/templates/inventory/tag_unlink_device.html
@@ -4,7 +4,7 @@
 <div class="pagetitle">
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devices.devicelist')}}">Inventory</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devicelist')}}">Inventory</a></li>
       <li class="breadcrumb-item">Unlink Tag from Device</li>
     </ol>
   </nav>
