--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -7,7 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.action_add') }}" method="post">
+      <form action="{{ url_for('inventory.action_add') }}" method="post">
       {{ form_new_action.csrf_token }}
         <div class="modal-body">
           {% for field in form_new_action %}
