--- a/ereuse_devicehub/templates/inventory/addDeviceslot.html
+++ b/ereuse_devicehub/templates/inventory/addDeviceslot.html
@@ -7,7 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.lot_devices_add') }}" method="post">
+      <form action="{{ url_for('inventory.lot_devices_add') }}" method="post">
       {{ form_lot_device.csrf_token }}
         <div class="modal-body">
           Please write a name of a lot
