--- a/ereuse_devicehub/templates/inventory/addDevicestag.html
+++ b/ereuse_devicehub/templates/inventory/addDevicestag.html
@@ -7,7 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.tag_devices_add') }}" method="post">
+      <form action="{{ url_for('inventory.tag_devices_add') }}" method="post">
       {{ form_tag_device.csrf_token }}
         <div class="modal-body">
           Please write a name of a tag
