--- a/ereuse_devicehub/templates/inventory/allocate.html
+++ b/ereuse_devicehub/templates/inventory/allocate.html
@@ -8,7 +8,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.allocate_add') }}" method="post">
+      <form action="{{ url_for('inventory.allocate_add') }}" method="post">
       {{ form_new_allocate.csrf_token }}
         <div class="modal-body">
           {% for field in form_new_allocate %}
