--- a/ereuse_devicehub/templates/inventory/data_wipe.html
+++ b/ereuse_devicehub/templates/inventory/data_wipe.html
@@ -8,7 +8,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.datawipe_add') }}" method="post" enctype="multipart/form-data">
+      <form action="{{ url_for('inventory.datawipe_add') }}" method="post" enctype="multipart/form-data">
       {{ form_new_datawipe.csrf_token }}
         <div class="modal-body">
           {% for field in form_new_datawipe %}
