--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -5,7 +5,7 @@
   <h1>Inventory</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devices.devicelist')}}">Inventory</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devicelist')}}">Inventory</a></li>
       <li class="breadcrumb-item active">{{ page_title }}</li>
     </ol>
   </nav>
