--- a/ereuse_devicehub/templates/inventory/upload_snapshot.html
+++ b/ereuse_devicehub/templates/inventory/upload_snapshot.html
@@ -5,7 +5,7 @@
   <h1>Inventory</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devices.devicelist')}}">Inventory</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devicelist')}}">Inventory</a></li>
       <li class="breadcrumb-item active">{{ page_title }}</li>
     </ol>
   </nav>
@@ -56,9 +56,9 @@
 
                   <div>
                     {% if lot_id %}
-                    <a href="{{ url_for('inventory.devices.lotdevicelist', lot_id=lot_id) }}" class="btn btn-danger">Cancel</a>
+                    <a href="{{ url_for('inventory.lotdevicelist', lot_id=lot_id) }}" class="btn btn-danger">Cancel</a>
                     {% else %}
-                    <a href="{{ url_for('inventory.devices.devicelist') }}" class="btn btn-danger">Cancel</a>
+                    <a href="{{ url_for('inventory.devicelist') }}" class="btn btn-danger">Cancel</a>
                     {% endif %}
                     <button class="btn btn-primary" type="submit">Send</button>
                   </div>
